Bug 1706003 - extend network error checks in EventSourceImpl::OnStopRequest. r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D165612